squish in v to make it @v4

--- a/.github/workflows/hello_world.yml
+++ b/.github/workflows/hello_world.yml
@@ -9,6 +9,6 @@ jobs:
 
     steps:
       - name: check out repository code
-        uses: actions/checkout@4
+        uses: actions/checkout@v4
       - run: echo "$(cat hello_world.txt)"
     
